# mirko.ai

./: .gitignore  README.md  db.db  main.py  pyproject.toml  pytest.ini  requirements.txt  settings.json  typescript
.github/workflows/: backend-test.yml  frontend-test.yml  test.yml
abilities/: __init__.py  abilities.py  file_ops.py  file_util.py  terminal_ops.py
core/: agent_base.py  message_thread_manager.py  run_session.py
core/memory/: db.db  working_memory.py  working_memory_db.py
core/tools/: __init__.py  base.py  browser_tool.py  files_tool.py  retrieval_tool.py  task_tool.py  terminal_tool.py
core/utils/: __init__.py  debug_logging.py  llm.py  message_thread_manager.py  test.py  workspace_utils.py
core/workspace/: Dockerfile  README.md  docker-compose.yml
frontend/: README.md  package-lock.json  package.json  pnpm-lock.yaml
frontend/app/: layout.tsx  page.tsx  providers.tsx
frontend/src/: App.js  index.js
test/: test_workspace_integration.py
tests/: test_abilities.py  test_abilities.test_retrieval_anthropic_schema.approved.txt  test_abilities.test_retrieval_schema.approved.txt  test_abilities.test_schema_retrieval.approved.txt  test_abilities.test_schema_terminal.approved.txt  test_abilities.test_terminal_anthropic_schema.approved.txt  test_terminal_ops.py  test_tools.py  test_tools.test_retrieval_schema.approved.txt  test_tools.test_terminal_schema.approved.txt
working_directory/: file1.py
working_directory/frontend/: Dockerfile  jsconfig.json  package-lock.json  (+1 more)
workspace/: Dockerfile  README.md  __init__.py  docker-compose.yml
(+42 files in other folders)
