[tool.poetry]
name = "mirko-ai"
version = "0.1.0"
description = "Open-source Devin implementation."
authors = ["null"]
license = "MIT"
readme = "README.md"
packages = [
    {include = "abilities"},
    {include = "layers"},
    {include = "memory"}
]

[tool.poetry.dependencies]
python = "^3.12"
docker = "^7.0.0"
pytest = "^8.1.1"
pytest-approvaltests = "^0.2.4"
pyfakefs = "^5.3.5"
streaming-assistants = "^0.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
